# HarborNAS-LocalAgent-Project

./: .gitignore  AGENTS.md  Cargo.toml  HarborBeacon-Harbor-Collaboration-Contract-v2.md  HarborBeacon-HarborGate-v1.5-Cutover-Evidence.md  HarborBeacon-HarborGate-v2.0-Upgrade-Runbook.md  HarborBeacon-HarborOS-Control-Collaboration-Contract-v1.md  HarborBeacon-LocalAgent-DocumentIndex.md  HarborBeacon-LocalAgent-LaunchChecklist.md  HarborBeacon-LocalAgent-Plan.md  HarborBeacon-LocalAgent-Roadmap.md  HarborNAS-CI-Contract-Pipeline-Checklist-v1.md  HarborNAS-Contract-E2E-Test-Plan-v1.md  HarborNAS-Files-BatchOps-Contract-v1.md  HarborNAS-GitHub-Actions-Workflow-Draft-v1.md  HarborNAS-Harbor-Collaboration-Contract-v2.md  HarborNAS-HarborOS-Control-Collaboration-Contract-v1.md  HarborNAS-IM-Gateway-Agent-Contract-v1.2.md  HarborNAS-IM-Gateway-Agent-Contract-v1.4.md  HarborNAS-IM-Gateway-Agent-Contract-v1.md  HarborNAS-Implementation-Plan-v1.md  HarborNAS-LocalAgent-DocumentIndex.md  HarborNAS-LocalAgent-LaunchChecklist.md  HarborNAS-LocalAgent-MeetingGuide.md  HarborNAS-LocalAgent-Plan.md  HarborNAS-LocalAgent-QuickRef.md  HarborNAS-LocalAgent-Roadmap.md  HarborNAS-LocalAgent-V2-Assistant-Skills-Roadmap.md  HarborNAS-Middleware-Endpoint-Contract-v1.md  HarborNAS-Planner-TaskDecompose-Contract-v1.md  HarborNAS-Skill-Spec-v1.md  README.md  audit-coverage-summary.json  check_feishu_auth.py  check_feishu_ws.py  latency-summary.json  requirements-dev.txt
.github/: copilot-instructions.md
assistant/: __init__.py  audit.py  policy.py
docs/: HarborGate-to-HarborBeacon-overview.pptx  aiot-camera-canary-watchlist.md  aiot-camera-regression-annex-2026-04-22.md  aiot-device-media-ingest-watchlist.md  aiot-image-retrieval-canary-evidence.md  aiot-tapo-native-access-acceptance.md  camera-domain-task-contract.md  cited-retrieval-reply-pack.md  debian13-real-usage-plan.md  document-rag-mvp.md  harbor82-local-first-rehearsal-2026-04-29.md  harborbeacon-agent-prompt-checklist.md  harborbeacon-new-collaborator-brief.md  harbordesk-runtime-truth-closeout-2026-04-25.md  harbordesk-runtime-truth-handoff-2026-04-25.md  harborgate-to-harborbeacon-walkthrough.md  harbornas-iso-packaging-dependencies.md  harboros-192.168.3.165-preflight.md  harboros-real-integration-parity-note.md  harboros-vm-validation-runbook.md  (+18 more)
(+358 files in other folders)
