[package]
name = "harbornas_local_agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "harbornas-agent"
path = "src/main.rs"

[[bin]]
name = "validate-contract-schemas"
path = "src/bin/validate_contract_schemas.rs"

[[bin]]
name = "run-e2e-suite"
path = "src/bin/run_e2e_suite.rs"

[[bin]]
name = "run-drift-matrix"
path = "src/bin/run_drift_matrix.rs"

[[bin]]
name = "evaluate-release-gate"
path = "src/bin/evaluate_release_gate.rs"

[[bin]]
name = "feishu-connectivity"
path = "src/bin/feishu_connectivity.rs"

[[bin]]
name = "feishu-echo-bot"
path = "src/bin/feishu_echo_bot.rs"

[[bin]]
name = "feishu-harbor-bot"
path = "src/bin/feishu_harbor_bot.rs"

[[bin]]
name = "agent-hub-admin-api"
path = "src/bin/agent_hub_admin_api.rs"

[[bin]]
name = "assistant-task-api"
path = "src/bin/assistant_task_api.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
glob = "0.3"
which = "8.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "charset", "http2", "json", "multipart", "rustls-tls", "system-proxy"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
prost = "0.13"
tiny_http = "0.12"
qrcodegen = "1.8"
if-addrs = "0.13"
quick-xml = "0.38"
